# csv-upc-omg

./: .coverage  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  RULES.md  manage.py  pyproject.toml  test_hook.py
.github/workflows/: ci-lib.yml  ci-web.yml  ci.yml
assets/css/: tailwind.css
src/csv_upc_omg/: __init__.py  barcode_lookup.py  csv_utils.py  main.py
tests/: test_barcode_lookup.py  test_csv_utils.py  test_main.py
web/: manage.py
web/config/: asgi.py  urls.py  wsgi.py
web/config/settings/: base.py  dev.py  production.py
web/inventory/: admin.py  apps.py  forms.py  models.py  services.py  tables.py  tasks.py  urls.py  views.py
web/inventory/api/: __init__.py  serializers.py  urls.py  views.py
web/inventory/management/commands/: titles.py  upcs.py
web/inventory/migrations/: 0001_initial.py
web/inventory/static/css/: main.css
web/inventory/templates/: base.html
web/inventory/templates/dashboard/: index.html
web/inventory/templates/lookups/: list.html
web/inventory/templates/uploads/: detail.html  export.html  list.html  upload.html
web/inventory/tests/: test_inventory.py
